--- a/foundry.toml
+++ b/foundry.toml
@@ -10,8 +10,22 @@ optimizer = true
 optimize = true
 optimize_runs = 200
 remappings = ['@openzeppelin/=lib/openzeppelin-contracts/']
+fs_permissions = [{ access = "read", path = "./"}]
 
-rpc_endpoints = { mainnet = "https://rpc.ankr.com/eth", optimism = "https://rpc.ankr.com/optimism" , fantom = "https://rpc.ankr.com/fantom", arbitrum = "https://rpc.ankr.com/arbitrum", bsc = "https://rpc.ankr.com/bsc", moonriver = "https://moonriver.public.blastapi.io", gnosis = "https://rpc.ankr.com/gnosis", avax = "https://rpc.ankr.com/avalanche", polygon = "https://rpc.ankr.com/polygon"}
+[fmt]
+line_length = 120
+tab_width = 4
+bracket_spacing=false
+int_types = "long"
+func_attrs_with_params_multiline = false
+quote_style = "double"
+number_underscore = "thousands"
+multiline_func_header = "params_first"
+single_line_statement_blocks = 'preserve'
+variable_override_spacing = true
+wrap_comments = false
+ignore = []
+
 
 [profile.hardhat]
 src = "contracts"
@@ -27,4 +41,17 @@ no_match_test="test/**.sol"
 
 [rpc_endpoints]
 zksync = "${ZKSYNCSEPOLIA_RPC_URL}"
-
+mainnet = "https://eth.llamarpc.com"
+blast = "https://rpc.ankr.com/blast"
+optimism = "https://optimism.llamarpc.com"
+fantom = "https://fantom-pokt.nodies.app"
+arbitrum = "https://arbitrum.llamarpc.com"
+bsc = "https://binance.llamarpc.com"
+moonriver = "https://moonriver.public.blastapi.io"
+gnosis = "https://gnosis-mainnet.public.blastapi.io"
+avalanche = "https://avax.meowrpc.com"
+polygon = "https://rpc.ankr.com/polygon"
+celo = "https://rpc.ankr.com/celo"
+base = "https://developer-access-mainnet.base.org"
+linea = "https://linea.drpc.org"
+mantle = "https://rpc.mantle.xyz"
