Add exploit tests for CloberDEX and Moonhacker vulnerabilities; update .gitignore and remappings

--- a/foundry.toml
+++ b/foundry.toml
@@ -43,7 +43,7 @@ no_match_test="test/**.sol"
 zksync = "${ZKSYNCSEPOLIA_RPC_URL}"
 mainnet = "https://eth.llamarpc.com"
 blast = "https://rpc.ankr.com/blast"
-optimism = "https://optimism.llamarpc.com"
+optimism = "https://mainnet.optimism.io"
 fantom = "https://fantom-pokt.nodies.app"
 arbitrum = "https://arbitrum.llamarpc.com"
 bsc = "https://binance.llamarpc.com"
